# anthos-empathy-session

./: BUILD.bazel  WORKSPACE
bar/: BUILD.bazel  deployment.yaml  service.yaml
foo/: BUILD.bazel  deployment.yaml  service.yaml
