load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kelseyhightower/anthos-empathy-session/foo",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "foo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "go_image",
    srcs = ["main.go"],
    importpath = "github.com/kelseyhightower/anthos-empathy-session/foo",
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "Docker",
    image = ":go_image",
    registry = "gcr.io",
    repository = "anthos-239321/foo",
    tag = "dev",
)

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "service_west",
    cluster = "gke_anthos-239321_us-west1-a_cluster-3",
    kind = "service",

    # A template of a Kubernetes Deployment object yaml.
    template = ":service.yaml",
    visibility = ["//visibility:public"],
)

k8s_object(
    name = "service_central",
    cluster = "gke_anthos-239321_us-central1-a_cluster-3",
    kind = "service",

    # A template of a Kubernetes Deployment object yaml.
    template = ":service.yaml",
    visibility = ["//visibility:public"],
)

k8s_object(
    name = "dev_west",
    cluster = "gke_anthos-239321_us-west1-a_cluster-3",
    kind = "deployment",

    # A template of a Kubernetes Deployment object yaml.
    template = ":deployment.yaml",
    visibility = ["//visibility:public"],
)

k8s_object(
    name = "dev_central",
    cluster = "gke_anthos-239321_us-central1-a_cluster-3",
    kind = "deployment",

    # A template of a Kubernetes Deployment object yaml.
    template = ":deployment.yaml",
    visibility = ["//visibility:public"],
)
